Fix bad check of GtkActionPadType in gtk_pad_controller_set_action

https://bugzilla.gnome.org/show_bug.cgi?id=779317